--- a/scss/_headings.scss
+++ b/scss/_headings.scss
@@ -35,19 +35,23 @@ h6 {
 h1 {
   font-size: 2 * $em;
   font-weight: 500;
+  margin-top: 4 * $em;
 }
 
 h2 {
   font-size: 1.4 * $em;
   font-weight: 400;
+  margin-top: 3 * $em;
 }
 
 h3 {
   font-size: 1.2 * $em;
+  margin-top: 2 * $em;
 }
 
 h4 {
   font-size: $em;
+  margin-top: $em;
 }
 
 h5 {
