Fixed checkbox and radio input
Inlined checkbox and radio inputs by using surrounding label. Also decreased margin bottom.

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -64,7 +64,7 @@ textarea {
 
 label {
   display: inline-block;
-  margin-bottom: .82 * $em;
+  margin-bottom: .7 * $em;
 
   + * {
     page-break-before: always;
@@ -138,6 +138,7 @@ input[type="radio"] {
   height: 1.65 * $em;
   margin-left: 0;
   margin-right: .5 * $em;
+  vertical-align: middle;
 
   + label {
     page-break-before: avoid;
