sub and sub elements style added in typography scss file

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -65,3 +65,20 @@ ins,
 u {
   text-decoration: underline;
 }
+
+// As per yegor256 suggest https://gist.github.com/unruthless/413930
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
+}
