--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -65,3 +65,19 @@ ins,
 u {
   text-decoration: underline;
 }
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
+}
