--- a/scss/_defs.scss
+++ b/scss/_defs.scss
@@ -30,10 +30,10 @@ $monospace: Menlo, Monaco, Consolas, 'Courier New', monospace;
 // colors
 $black: #000;
 $white: #fff;
-$gray: #ccc;
-$blue: #367ac3;
+$gray: #595959;
+$blue: #275a90;
 $red: #db423c;
-$green: #3fa75f;
+$green: #2a6f3b;
 $yellow: #ffc;
 
 // responsive
