--- a/scss/_headings.scss
+++ b/scss/_headings.scss
@@ -35,28 +35,33 @@ h6 {
 h1 {
   font-size: 2 * $em;
   font-weight: 500;
+  line-height: 2.3 * $em;
   margin-top: 4 * $em;
 }
 
 h2 {
   font-size: 1.4 * $em;
   font-weight: 400;
+  line-height: 1.7 * $em;
   margin-top: 3 * $em;
 }
 
 h3 {
   font-size: 1.2 * $em;
+  line-height: 1.5 * $em;
   margin-top: 2 * $em;
 }
 
 h4 {
   font-size: $em;
+  line-height: 1.3 * $em;
   margin-top: $em;
 }
 
 h5 {
   font-size: .8 * $em;
   font-weight: bold;
+  line-height: 1.2 * $em;
   text-transform: uppercase;
 }
 
@@ -64,5 +69,6 @@ h6 {
   color: $gray;
   font-size: .8 * $em;
   font-weight: bold;
+  line-height: 1 * $em;
   text-transform: uppercase;
 }
