aside tag implemented

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -75,9 +75,18 @@ sup {
 }
 
 sup {
-  top: -0.5em;
+  top: -.5em;
 }
 
 sub {
-  bottom: -0.25em;
+  bottom: -.25em;
 }
+
+aside {
+  float: right;
+  height: 100vh;
+  padding: 43.2px;
+  padding-left: 10px;
+  width: 285px;
+}
+
