--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -31,6 +31,7 @@ th {
   border-bottom: (.06 * $em) solid $gray;
   overflow: auto;
   padding: .825 * $em $em;
+  text-align: left;
   vertical-align: top;
 }
 
