--- a/less/_defs.less
+++ b/less/_defs.less
@@ -21,26 +21,26 @@
 // SOFTWARE.
 
 // sizes
-@em: 18px;
+@em: 13px;
 
 // fonts
-@sans-serif: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-@monospace: Menlo, Monaco, Consolas, 'Courier New', monospace;
+@sans-serif: 'Segoe UI', '微软雅黑', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+@monospace: Menlo, Monaco, Consolas, 'Courier New', monospace, '微软雅黑';
 
 // colors
 @black: #000;
 @white: #fff;
-@gray: #595959;
-@blue: #275a90;
-@red: #db423c;
-@green: #2a6f3b;
-@yellow: #ffc;
+@gray: #909ca4;
+@blue: #8dc223;
+@red: #e84d61;
+@green: #2e93bd;
+@yellow: #f6d013;
 
 // responsive
 @mobile-width: 767px;
 
 .sans-serif {
-  font-family: @sans-serif;
+  font-family: @monospace;
   font-size: @em;
   font-stretch: normal;
   font-style: normal;
