Pretty fonts :smile:
Yay!

--- a/scss/_defs.scss
+++ b/scss/_defs.scss
@@ -24,7 +24,7 @@
 $em: 18px;
 
 // fonts
-$sans-serif: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$sans-serif: system-ui, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $monospace: Menlo, Monaco, Consolas, 'Courier New', monospace;
 
 // colors
