Switch base size unit to be defined in rem for text resizing. Fix #216

--- a/scss/_defs.scss
+++ b/scss/_defs.scss
@@ -21,7 +21,7 @@
 // SOFTWARE.
 
 // sizes
-$em: 18px;
+$em: (18 / 16) * 1rem;
 
 // fonts
 $sans-serif: system-ui, 'Helvetica Neue', Helvetica, Arial, sans-serif;
