--- a/scss/_defs.scss
+++ b/scss/_defs.scss
@@ -22,6 +22,7 @@
 
 // sizes
 $em: (18 / 16) * 1rem;
+$spacing: 18px;
 
 // fonts
 $sans-serif: system-ui, 'Helvetica Neue', Helvetica, Arial, sans-serif;
