--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -44,7 +44,7 @@ body {
   @extend %sans-serif;
   background: $white;
   color: lighten($black, 10);
-  padding: 2 * $em;
+  padding: 2 * $spacing;
 }
 
 p,
@@ -65,7 +65,7 @@ address {
 section {
   margin-left: auto;
   margin-right: auto;
-  width: 50 * $em;
+  width: 50 * $spacing;
 }
 
 aside {
@@ -76,7 +76,7 @@ aside {
 article,
 header,
 footer {
-  padding: 2.4 * $em;
+  padding: 2.4 * $spacing;
 }
 
 article {
@@ -94,8 +94,8 @@ nav {
 
     li {
       display: inline-block;
-      margin-left: .5 * $em;
-      margin-right: .5 * $em;
+      margin-left: .5 * $spacing;
+      margin-right: .5 * $spacing;
       vertical-align: middle;
 
       &:first-child {
@@ -111,7 +111,7 @@ nav {
 
 ol,
 ul {
-  margin-left: 1.75 * $em;
+  margin-left: 1.75 * $spacing;
 }
 
 li {
