--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -40,7 +40,7 @@ table {
     border-bottom-width: .12 * $em;
 
     &:hover {
-      background-color: lighten($gray, 5);
+      background-color: lighten($black, 98);
     }
 
     th {
