--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -24,7 +24,7 @@ html {
 body {
   @extend %sans-serif;
   background: $white;
-  color: lighten($black, 10);
+  color: safe-adjust-lightness($black, 10);
   padding: 2 * $spacing;
 }
 
@@ -62,7 +62,7 @@ footer {
 
 article {
   background: $white;
-  border: 1px solid lighten($black, 85);
+  border: 1px solid safe-adjust-lightness($black, 85);
 }
 
 nav {
