Add SPDX header to _functions.scss

--- a/scss/_functions.scss
+++ b/scss/_functions.scss
@@ -1,3 +1,6 @@
+// SPDX-FileCopyrightText: Copyright (c) 2015-2025 Yegor Bugayenko
+// SPDX-License-Identifier: MIT
+
 @use "sass:color";
 
 /// Adjusts lightness of a color by a percentage.
