#351: Refactor imports to use @use directive.

--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,6 +1,8 @@
 // SPDX-FileCopyrightText: Copyright (c) 2015-2025 Yegor Bugayenko
 // SPDX-License-Identifier: MIT
 
+@use 'defs' as *;
+
 * {
   border: 0;
   border-collapse: separate;
