--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,7 +1,7 @@
 // SPDX-FileCopyrightText: Copyright (c) 2015-2025 Yegor Bugayenko
 // SPDX-License-Identifier: MIT
 
-@import 'defs';
+@use 'defs' as *;
 
 a {
   color: $blue;
