#351: Refactor table responsive styling.

--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -51,8 +51,19 @@ table {
 
       @media all and (max-width: 1024px) {
         border: 0;
+        border-right: .06 * $em solid color.scale($black, $lightness: 80%);
         display: inline;
         padding: 0;
+        padding-left: .3 * $em;
+        padding-right: .6 * $em;
+
+        &:first-child {
+          padding-left: 0;
+        }
+
+        &:last-child {
+          border-right: 0;
+        }
       }
     }
 
