#351: Refactor SCSS imports to use functions.

--- a/scss/_headings.scss
+++ b/scss/_headings.scss
@@ -50,6 +50,6 @@ h6 {
   color: $gray;
   font-size: .8 * $em;
   font-weight: bold;
-  line-height: 1 * $em;
+  line-height: $em;
   text-transform: uppercase;
 }
