--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1,6 +1,6 @@
 // SPDX-FileCopyrightText: Copyright (c) 2015-2025 Yegor Bugayenko
 // SPDX-License-Identifier: MIT
 
-*[hidden] {
+[hidden] {
   display: none;
 }
