--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -28,7 +28,7 @@ textarea,
 select,
 button {
   @extend %sans-serif;
-  border-radius: .2 * $spacing;
+  border-radius: .2 * $em;
   display: inline-block;
   padding: .55 * $em;
 
@@ -128,7 +128,7 @@ input[type="radio"] {
   flex-grow: 0;
   height: 1.65 * $em;
   margin-left: 0;
-  margin-right: .5 * $spacing;
+  margin-right: .5 * $em;
   vertical-align: middle;
 
   + label {
@@ -137,5 +137,5 @@ input[type="radio"] {
 }
 
 select[multiple] {
-  min-width: 15 * $spacing;
+  min-width: 15 * $em;
 }
